feat fix : 주문/결제 오류 수정